<resources>
    <string name="app_name">AutoServiceTracker</string>
    <string name="vehicle_name">Name</string>
    <string name="vehicle_year">Year</string>
    <string name="vehicle_make">Make</string>
    <string name="vehicle_model">Model</string>
    <string name="vehicle_engine">Engine</string>
    <string name="vehicle_mileage">Mileage</string>
    <string name="service_name">Name</string>
    <string name="miles_left">Miles Left</string>
    <string name="interval">Interval</string>
    <string name="miles_months">Miles | Months</string>
    <string name="description">Description</string>
    <string name="miles_interval">Miles Interval</string>
    <string name="months_interval">Months Interval</string>
    <string name="service">Service</string>
    <string name="date_of_service">Date of Service</string>
    <string name="cost">Cost</string>
    <string name="mileage_of_service">Mileage of Service</string>
    <string name="notes">Notes</string>
    <string name="days_left">Days Left</string>
</resources>
