<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.RecyclerView
    android:id="@+id/recyclerViewVehicle"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guidelineHVehicle" />

    <android.support.constraint.Guideline
    android:id="@+id/guidelineHVehicle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent=".5" />

    <TextView
        android:id="@+id/textViewServiceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/vehicle_name"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
    android:id="@+id/editTextVehicleName"
    android:layout_width="0dp"
    android:layout_height="40dp"
    android:layout_marginStart="4dp"
    android:layout_marginLeft="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginRight="4dp"
    android:ems="10"
    android:inputType="text"
    app:layout_constraintEnd_toStartOf="@+id/guidelineVVehicle"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textViewServiceName" />

    <android.support.constraint.Guideline
    android:id="@+id/guidelineVVehicle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent=".5" />

    <TextView
        android:id="@+id/textViewYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/vehicle_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMake" />

    <EditText
        android:id="@+id/editTextYear"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVVehicle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewYear" />

    <TextView
        android:id="@+id/textViewMake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/vehicle_make"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextVehicleName" />

    <EditText
    android:id="@+id/editTextMake"
    android:layout_width="0dp"
    android:layout_height="40dp"
    android:layout_marginStart="4dp"
    android:layout_marginLeft="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginRight="4dp"
    android:ems="10"
    android:inputType="text"
    app:layout_constraintEnd_toStartOf="@+id/guidelineVVehicle"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textViewMake" />

    <TextView
        android:id="@+id/textViewModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/vehicle_model"
        app:layout_constraintStart_toStartOf="@+id/guidelineVVehicle"
        app:layout_constraintTop_toBottomOf="@+id/editTextMileage" />

    <EditText
        android:id="@+id/editTextModel"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineVVehicle"
        app:layout_constraintTop_toBottomOf="@+id/textViewModel" />

    <TextView
        android:id="@+id/textViewEngine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/vehicle_engine"
        app:layout_constraintStart_toStartOf="@+id/guidelineVVehicle"
        app:layout_constraintTop_toBottomOf="@+id/editTextModel" />

    <EditText
        android:id="@+id/editTextEngine"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineVVehicle"
        app:layout_constraintTop_toBottomOf="@+id/textViewEngine" />

    <TextView
        android:id="@+id/textViewMileage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/vehicle_mileage"
        app:layout_constraintStart_toStartOf="@+id/guidelineVVehicle"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextMileage"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineVVehicle"
        app:layout_constraintTop_toBottomOf="@+id/textViewMileage" />

</android.support.constraint.ConstraintLayout>